# python_ireland_talk_database

./: .gitignore  ARCHITECTURE.md  CLEAN_ARCHITECTURE_REFACTOR_PLAN.md  LICENSE  Makefile  Pipfile  PyCon 2022_Sessions.csv  PyCon Ireland 2023_Sessions.csv  README.md  README_fastapi-react.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  pythonireland_meetups.csv
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_backfill_search_vector.py
analysis/: explore_sessionize.py
api_modules/: meetup.py  sessionize.py
archive/CLEAN_ARCH/: ARCHITECTURE.md  MIGRATION.md  README.md  TAXONOMY_IMPLEMENTATION_PLAN.md  docker-compose.test.yml
archive/frontend/: Dockerfile  package.json
backend/: Dockerfile  main.py  run.py
backend/api/: __init__.py
backend/app/: main.py  service.py  tagging.py
backend/application/: __init__.py
backend/contracts/: repositories.py
backend/core/: config.py
backend/database/: models.py  postgres_client.py
backend/db/: engine.py  models.py  repo.py
backend/domain/: __init__.py  models.py
backend/models/: talk.py
backend/services/: talk_service.py
data/: PyCon 2023_Speakers.csv  PyCon Limerick 2023_Sessions.csv  PyCon Limerick 2023_Speakers.csv
dev_scripts/explore/: explore_arch_ring2.py  explore_arch_ring3.py  (+2 more)
docs/: webserver.md
frontend/: .env.development_example  Dockerfile  package-lock.json  package.json
nginx/: nginx.conf
scripts/: migrate_sync_fields.py  test_postgres.sh
tests/: conftest.py  test_postgres_client.py  test_ring1.py  test_taxonomy_service.py
(+67 files in other folders)
