[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-ireland-talk-database"
version = "0.1.0"
description = "Python Ireland Talk Database - Tools for managing conference data"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
# Remove dependencies - let Pipenv handle them
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88